--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fingard.rabbit.cloud-tools</groupId>
+            <artifactId>cloud-tools</artifactId>
+            <version>1.3.0-fb-mysql-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
