--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>cloud-tools</artifactId>
             <version>1.3.0-fb-mysql-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.fingard.ats.core</groupId>
+            <artifactId>ats-core</artifactId>
+            <version>3.0.3.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
