--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,9 @@
             <artifactId>aspectjrt</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fingard.rabbit.cloud-tools</groupId>
-            <artifactId>cloud-tools</artifactId>
-            <version>1.3.0-fb-mysql-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fingard.ats.core</groupId>
-            <artifactId>ats-core</artifactId>
-            <version>3.0.3.0-SNAPSHOT</version>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.4.6</version>
         </dependency>
     </dependencies>
 
