--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <version>1.1.7</version>
         </dependency>
         <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.3.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>5.1.10.RELEASE</version>
@@ -97,11 +102,6 @@
             <groupId>com.oracle.database.nls</groupId>
             <artifactId>orai18n</artifactId>
             <version>19.7.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sunyard.insurance</groupId>
-            <artifactId>sunecm-client</artifactId>
-            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
